--- a/gracias.html
+++ b/gracias.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>¡Gracias por aplicar! | Impulso Digital 360</title>
+  <title>Gracias · Impulso Digital 360 | CL Tech Solutions</title>
 
   <!-- SEO básico -->
-  <meta name="description" content="Gracias por confiar tu página web a CL Tech Solutions. Revisa los próximos pasos y escríbenos por WhatsApp para activar tu página y recibir el link de pago." />
-  <meta name="author" content="CL Tech Solutions">
+  <meta name="description" content="Gracias por confiar en Impulso Digital 360. Ya recibimos tu formulario. Solo falta que nos envíes un mensaje por WhatsApp para enviarte el link de pago y los pasos finales de tu página web profesional." />
+  <meta name="robots" content="noindex,nofollow" />
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -39,160 +39,115 @@
     }
     .card{
       border-radius:1.5rem;
-      border:1px solid rgba(255,255,255,0.08);
-      background:rgba(5,6,10,0.96);
-      box-shadow:0 28px 80px rgba(0,0,0,0.85);
+      border:1px solid rgba(255,255,255,0.06);
+      background:radial-gradient(circle at top,rgba(17,215,227,0.08),rgba(5,6,10,0.96));
+      box-shadow:0 26px 80px rgba(0,0,0,0.9);
     }
     .badge{
       font-size:11px;
       letter-spacing:0.18em;
       text-transform:uppercase;
     }
-    .btn-primary-hotmart{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      gap:0.4rem;
-      border-radius:999px;
-      padding:0.9rem 1.8rem;
-      font-size:0.9rem;
-      font-weight:600;
-      background:linear-gradient(135deg,#F97316,#EA580C);
-      color:#0b0b0b;
-      box-shadow:0 14px 40px rgba(249,115,22,0.6);
-      transition:transform 0.15s ease, box-shadow 0.15s ease, filter 0.15s ease;
-    }
-    .btn-primary-hotmart:hover{
-      transform:translateY(-2px);
-      box-shadow:0 20px 55px rgba(249,115,22,0.9);
-      filter:brightness(1.05);
-    }
-    .btn-ghost{
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,0.2);
-      padding:0.9rem 1.7rem;
-      font-size:0.9rem;
-      font-weight:500;
-      color:rgba(255,255,255,0.85);
-      background:transparent;
-      transition:all 0.15s ease;
-    }
-    .btn-ghost:hover{
-      border-color:#11D7E3;
-      color:#11D7E3;
-      background:rgba(17,215,227,0.08);
-    }
   </style>
 </head>
 <body class="min-h-screen flex flex-col">
 
-  <!-- NAV -->
-  <header class="border-b border-white/10 bg-black/80 backdrop-blur">
-    <div class="max-w-5xl mx-auto px-4 sm:px-6 h-20 flex items-center justify-between gap-4">
-      <a href="/" class="flex items-center gap-2">
-        <img
-          src="https://i.postimg.cc/s2YtHvzB/IMG_0156.png"
-          alt="CL Tech Solutions"
-          class="h-14 sm:h-16 w-auto object-contain"
-        />
-      </a>
-      <span class="hidden sm:inline-flex badge px-3 py-1 rounded-full border border-white/15 bg-white/5 text-clturq">
-        Impulso Digital 360 · Página web de alto impacto
-      </span>
-    </div>
-  </header>
-
-  <!-- CONTENIDO -->
-  <main class="flex-1 flex items-center">
-    <section class="w-full py-10 sm:py-14">
-      <div class="max-w-3xl mx-auto px-4 sm:px-6">
-        <div class="card px-6 sm:px-10 py-8 sm:py-10">
-          <div class="mb-4 flex flex-wrap items-center gap-2">
-            <span class="badge px-3 py-1 rounded-full border border-white/15 bg-white/5 text-clturq">
-              Paso completado ✅
-            </span>
-            <span class="badge px-3 py-1 rounded-full border border-claccent/40 bg-claccent/15 text-claccent">
-              Emprendedor en acción
-            </span>
-          </div>
-
-          <h1 class="text-2xl sm:text-3xl md:text-4xl font-semibold leading-tight mb-3">
-            ¡Gracias! Tu solicitud ya está registrada en <span class="text-clturq">Impulso Digital 360</span>
-          </h1>
-
-          <p class="text-sm sm:text-base text-white/75 mb-3">
-            Tus datos llegaron correctamente al equipo de <strong>CL Tech Solutions</strong>.
-          </p>
-
-          <p class="text-sm sm:text-base text-white/80 mb-6">
-            Ahora viene el paso más importante: <strong>abrir el canal directo con nosotros por WhatsApp</strong>
-            para que podamos enviarte el link de pago y la información para terminar de activar tu página web.
-          </p>
-
-          <div class="grid sm:grid-cols-2 gap-5 text-sm mb-7">
-            <div class="bg-black/50 rounded-xl border border-white/10 px-4 py-4">
-              <h2 class="font-semibold text-clturq mb-2 text-base">¿Qué hemos hecho hasta aquí?</h2>
-              <ul class="space-y-1.5 text-white/80 text-xs sm:text-sm">
-                <li>• Guardamos tu solicitud con los datos que acabas de enviar.</li>
-                <li>• Registramos tu interés en tener tu página funcionando cuanto antes.</li>
-                <li>• Dejamos listo el siguiente paso para continuar por WhatsApp.</li>
-              </ul>
-            </div>
-
-            <div class="bg-black/40 rounded-xl border border-claccent/40 px-4 py-4">
-              <h2 class="font-semibold text-claccent mb-2 text-base">¿Qué necesitas hacer ahora?</h2>
-              <ul class="space-y-1.5 text-white/80 text-xs sm:text-sm">
-                <li>• Tocar el botón de abajo para escribirnos directamente por WhatsApp.</li>
-                <li>• Enviar el mensaje que ya verás escrito automáticamente.</li>
-                <li>• Esperar nuestra respuesta con el <strong>link de pago</strong> y los <strong>pasos para enviar la información de tu negocio</strong>.</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="border border-white/10 rounded-xl px-4 py-4 mb-6 text-xs sm:text-sm text-white/70">
-            <p class="mb-1">
-              <strong class="text-clturq">En palabras simples:</strong>
+  <!-- Contenido principal -->
+  <main class="flex-1 flex items-center justify-center px-4 py-10">
+    <div class="max-w-xl w-full">
+      <div class="card px-6 py-7 sm:px-8 sm:py-9">
+        <!-- Logo / Marca -->
+        <div class="flex items-center gap-3 mb-5">
+          <img
+            src="https://i.postimg.cc/s2YtHvzB/IMG_0156.png"
+            alt="CL Tech Solutions"
+            class="h-12 sm:h-14 w-auto object-contain"
+          />
+          <div>
+            <p class="badge px-3 py-1 rounded-full border border-white/15 bg-white/5 text-clturq mb-1">
+              Impulso Digital 360 · CL Tech Solutions
             </p>
-            <p>
-              Ya diste el primer paso llenando el formulario.  
-              Ahora solo falta que nos envíes el primer mensaje por WhatsApp para que nuestro equipo pueda acompañarte
-              personalmente hasta ver tu página publicada.
+            <p class="text-[11px] text-white/60">
+              Proyecto para emprendedores que se toman en serio su negocio.
             </p>
           </div>
+        </div>
 
-          <!-- CTAs -->
-          <div class="flex flex-col sm:flex-row gap-3 mb-4">
-            <!-- BOTÓN PRINCIPAL: ESCRIBIR POR WHATSAPP -->
-            <a
-              href="https://wa.me/593999630862?text=Hola%2C%20ya%20llene%20el%20formulario%20de%20Impulso%20Digital%20360%20y%20quiero%20activar%20mi%20pagina%20web%2E%20Por%20favor%20envienme%20el%20link%20de%20pago%20y%20la%20informacion%20para%20enviar%20los%20datos%20de%20mi%20negocio%2E"
-              class="btn-primary-hotmart justify-center w-full sm:w-auto text-center"
-              target="_blank"
-              rel="noopener"
-            >
-              Pulsa aquí para escribirnos por WhatsApp
-            </a>
-
-            <a
-              href="/"
-              class="btn-ghost text-center w-full sm:w-auto"
-            >
-              Volver a la página principal
-            </a>
+        <!-- Icono de éxito -->
+        <div class="mx-auto mb-5 flex items-center justify-center">
+          <div class="h-16 w-16 sm:h-20 sm:w-20 rounded-full bg-emerald-500/15 border border-emerald-400/60 flex items-center justify-center">
+            <svg class="w-8 h-8 sm:w-10 sm:h-10 text-emerald-400" viewBox="0 0 24 24" fill="none">
+              <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
+              <path d="M8 12.5l2.2 2.3L16 9" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
           </div>
+        </div>
 
-          <p class="text-[11px] text-white/55">
-            No es necesario que vuelvas a llenar el formulario.  
-            Con un solo formulario enviado y un mensaje claro por WhatsApp es suficiente para seguir contigo el proceso.
+        <!-- Mensaje principal -->
+        <h1 class="text-2xl sm:text-3xl font-semibold text-center mb-3">
+          ¡Tu formulario llegó perfecto! ✅
+        </h1>
+        <p class="text-sm sm:text-base text-white/80 text-center mb-6">
+          Ya tenemos tus datos dentro de <strong>Impulso Digital 360</strong>.
+          Ahora solo falta un paso para activar tu proceso y dejar lista tu página
+          <span class="font-semibold text-clturq">de ventas profesional</span>.
+        </p>
+
+        <!-- Pasos claros -->
+        <div class="bg-black/40 border border-white/10 rounded-xl px-4 py-4 mb-6 text-xs sm:text-sm text-white/80 space-y-2">
+          <p class="font-semibold text-white mb-1">¿Qué tienes que hacer ahora?</p>
+          <p>1️⃣ Toca el botón verde de WhatsApp de aquí abajo.</p>
+          <p>2️⃣ Se abrirá una conversación con un mensaje ya escrito para el equipo de CL Tech Solutions.</p>
+          <p>3️⃣ <strong>Revisa y envía ese mensaje tal como está.</strong></p>
+          <p>4️⃣ Al recibirlo, te enviaremos el <strong>link de pago</strong> y los pasos finales para tu dominio y hosting.</p>
+        </div>
+
+        <!-- Botón WhatsApp (el número NO se muestra en texto, solo en el enlace) -->
+        <div class="flex flex-col items-center gap-3 mb-4">
+          <a
+            href="https://wa.me/593999630862?text=Hola%2C%20ya%20complet%C3%A9%20el%20formulario%20de%20Impulso%20Digital%20360%20para%20mi%20p%C3%A1gina%20web%20profesional.%20Quiero%20aprovechar%20la%20p%C3%A1gina%20de%20ventas%20que%20ustedes%20valoran%20en%20%24480%20y%20que%20ahora%20est%C3%A1n%20dise%C3%B1ando%20gratis%2C%20y%20deseo%20que%20me%20env%C3%ADen%20el%20link%20de%20pago%20y%20los%20pasos%20siguientes%20para%20el%20dominio%20y%20hosting.%20Gracias."
+            target="_blank"
+            class="inline-flex items-center justify-center gap-2 rounded-full px-6 sm:px-8 py-3 sm:py-3.5 text-sm sm:text-base font-semibold bg-[#25D366] hover:bg-[#1ebe5c] text-black shadow-[0_18px_70px_rgba(37,211,102,0.7)] transition-transform duration-150 hover:-translate-y-0.5"
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 32 32" aria-hidden="true">
+              <path fill="currentColor" d="M16.04 2C9.4 2 4 7.16 4 13.7c0 2.16.64 4.16 1.75 5.87L4 30l6.7-1.74A12.2 12.2 0 0 0 16.04 25c6.64 0 12.04-5.16 12.04-11.6C28.08 7.16 22.68 2 16.04 2Zm0 20.8c-1.84 0-3.54-.5-5.02-1.4l-.36-.21-3.74.97.99-3.63-.24-.38a8.3 8.3 0 0 1-1.3-4.46C7.37 8.2 11.24 4.7 16.04 4.7s8.67 3.5 8.67 7.97c0 4.46-3.87 8.13-8.67 8.13Zm4.22-6.1c-.23-.12-1.36-.7-1.57-.78-.2-.07-.35-.12-.5.12-.15.23-.57.7-.69.85-.13.15-.25.16-.47.06-.23-.12-.96-.35-1.83-1.12-.68-.6-1.13-1.34-1.26-1.57-.13-.23-.01-.35.1-.47.1-.1.23-.27.35-.4.12-.13.16-.23.23-.38.08-.15.04-.29-.02-.41-.07-.12-.5-1.2-.69-1.65-.18-.44-.37-.38-.5-.39h-.43c-.15 0-.4.06-.61.29-.21.23-.8.78-.8 1.9 0 1.12.82 2.2.94 2.35.12.15 1.61 2.46 3.94 3.35 1.47.58 2.04.63 2.77.53.45-.06 1.36-.55 1.55-1.08.19-.53.19-.99.13-1.08-.06-.09-.21-.15-.44-.27Z"/>
+            </svg>
+            <span>Finalizar proceso por WhatsApp</span>
+          </a>
+
+          <p class="text-[11px] text-white/60 text-center max-w-sm">
+            <strong>Paso clave:</strong> tú envías el primer mensaje.
+            Así mantienes el control de la conversación y nosotros sabemos que realmente quieres avanzar.
           </p>
         </div>
 
-        <p class="mt-4 text-[11px] text-center text-white/50">
-          © <span id="year"></span> CL Tech Solutions · Impulso Digital 360 ·  
-          Páginas web pensadas para vender, no solo para verse bonitas.
-        </p>
+        <!-- Mensaje adicional -->
+        <div class="text-[11px] text-white/55 text-center space-y-1">
+          <p>
+            En cuanto recibamos tu mensaje, un miembro del equipo revisará tu caso y te enviará
+            los <strong>detalles de pago</strong> y la ruta para que tu página de ventas empiece a trabajar por ti.
+          </p>
+          <p class="text-white/45">
+            Si cierras esta página, siempre puedes volver desde el mismo enlace donde llenaste el formulario.
+          </p>
+        </div>
       </div>
-    </section>
+
+      <div class="mt-4 text-center text-[11px] text-white/45">
+        <a href="/" class="underline-offset-2 hover:underline text-white/60">
+          Volver a la página principal
+        </a>
+      </div>
+    </div>
   </main>
+
+  <!-- Footer -->
+  <footer class="border-t border-white/10 py-4 bg-black/95">
+    <div class="max-w-5xl mx-auto px-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-white/55">
+      <p>© <span id="year"></span> CL Tech Solutions · Impulso Digital 360</p>
+      <p>Páginas de ventas profesionales para emprendedores que luchan.</p>
+    </div>
+  </footer>
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
