--- a/gracias.html
+++ b/gracias.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gracias · Impulso Digital 360 | CL Tech Solutions</title>
-
-  <!-- SEO básico -->
-  <meta name="description" content="Gracias por confiar en Impulso Digital 360. Ya recibimos tu formulario. Solo falta que nos envíes un mensaje por WhatsApp para enviarte el link de pago y los pasos finales de tu página web profesional." />
-  <meta name="robots" content="noindex,nofollow" />
+  <title>Gracias · Impulso Digital 360</title>
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -37,119 +33,91 @@
       background: radial-gradient(circle at top, #11141B 0, #05060A 45%, #000 100%);
       color:#fff;
     }
-    .card{
-      border-radius:1.5rem;
-      border:1px solid rgba(255,255,255,0.06);
-      background:radial-gradient(circle at top,rgba(17,215,227,0.08),rgba(5,6,10,0.96));
-      box-shadow:0 26px 80px rgba(0,0,0,0.9);
-    }
-    .badge{
-      font-size:11px;
-      letter-spacing:0.18em;
-      text-transform:uppercase;
-    }
   </style>
 </head>
-<body class="min-h-screen flex flex-col">
+<body class="min-h-screen flex flex-col justify-between">
 
-  <!-- Contenido principal -->
-  <main class="flex-1 flex items-center justify-center px-4 py-10">
-    <div class="max-w-xl w-full">
-      <div class="card px-6 py-7 sm:px-8 sm:py-9">
-        <!-- Logo / Marca -->
-        <div class="flex items-center gap-3 mb-5">
-          <img
-            src="https://i.postimg.cc/s2YtHvzB/IMG_0156.png"
-            alt="CL Tech Solutions"
-            class="h-12 sm:h-14 w-auto object-contain"
-          />
-          <div>
-            <p class="badge px-3 py-1 rounded-full border border-white/15 bg-white/5 text-clturq mb-1">
-              Impulso Digital 360 · CL Tech Solutions
-            </p>
-            <p class="text-[11px] text-white/60">
-              Proyecto para emprendedores que se toman en serio su negocio.
-            </p>
-          </div>
-        </div>
+  <header class="py-4 border-b border-white/10 bg-black/70 backdrop-blur-sm">
+    <div class="max-w-4xl mx-auto px-4 flex items-center gap-3">
+      <img
+        src="https://i.postimg.cc/s2YtHvzB/IMG_0156.png"
+        alt="CL Tech Solutions"
+        class="h-12 w-auto object-contain"
+      />
+      <div>
+        <p class="text-[10px] uppercase tracking-[0.18em] text-clturq">Impulso Digital 360</p>
+        <p class="text-xs text-white/70">Páginas web profesionales para emprendedores que se mueven</p>
+      </div>
+    </div>
+  </header>
 
-        <!-- Icono de éxito -->
-        <div class="mx-auto mb-5 flex items-center justify-center">
-          <div class="h-16 w-16 sm:h-20 sm:w-20 rounded-full bg-emerald-500/15 border border-emerald-400/60 flex items-center justify-center">
-            <svg class="w-8 h-8 sm:w-10 sm:h-10 text-emerald-400" viewBox="0 0 24 24" fill="none">
-              <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5" />
-              <path d="M8 12.5l2.2 2.3L16 9" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </div>
-        </div>
-
-        <!-- Mensaje principal -->
-        <h1 class="text-2xl sm:text-3xl font-semibold text-center mb-3">
-          ¡Tu formulario llegó perfecto! ✅
+  <main class="flex-1 flex items-center">
+    <div class="max-w-xl mx-auto px-4 py-10">
+      <div class="card-hotmart border border-white/15 bg-black/70 rounded-2xl px-6 py-7 shadow-2xl">
+        <p class="text-xs text-clturq tracking-[0.18em] uppercase mb-2">
+          Formulario recibido
+        </p>
+        <h1 class="text-2xl md:text-3xl font-semibold mb-3">
+          ¡Gracias por confiar en tu proyecto digital! ✅
         </h1>
-        <p class="text-sm sm:text-base text-white/80 text-center mb-6">
-          Ya tenemos tus datos dentro de <strong>Impulso Digital 360</strong>.
-          Ahora solo falta un paso para activar tu proceso y dejar lista tu página
-          <span class="font-semibold text-clturq">de ventas profesional</span>.
+
+        <p class="text-sm text-white/80 mb-4">
+          Ya recibimos la información de tu negocio. Ahora el siguiente paso depende de ti:
         </p>
 
-        <!-- Pasos claros -->
-        <div class="bg-black/40 border border-white/10 rounded-xl px-4 py-4 mb-6 text-xs sm:text-sm text-white/80 space-y-2">
-          <p class="font-semibold text-white mb-1">¿Qué tienes que hacer ahora?</p>
-          <p>1️⃣ Toca el botón verde de WhatsApp de aquí abajo.</p>
-          <p>2️⃣ Se abrirá una conversación con un mensaje ya escrito para el equipo de CL Tech Solutions.</p>
-          <p>3️⃣ <strong>Revisa y envía ese mensaje tal como está.</strong></p>
-          <p>4️⃣ Al recibirlo, te enviaremos el <strong>link de pago</strong> y los pasos finales para tu dominio y hosting.</p>
+        <ol class="list-decimal list-inside text-sm text-white/80 space-y-2 mb-5">
+          <li>
+            Nuestro sistema ya registró los datos de tu formulario para que el equipo los revise.
+          </li>
+          <li>
+            Para avanzar con tu página web y recibir el link de pago junto con los detalles,
+            <strong>tú das el primer paso escribiéndonos por WhatsApp</strong>.
+          </li>
+          <li>
+            Así la conversación empieza contigo, con intención real, y podemos atenderte de forma personalizada.
+          </li>
+        </ol>
+
+        <div class="border border-emerald-500/60 bg-emerald-500/10 rounded-xl px-4 py-3 mb-5 text-xs text-emerald-100">
+          <p class="font-semibold mb-1">¿Qué vas a recibir al escribirnos?</p>
+          <ul class="list-disc list-inside space-y-1">
+            <li>El enlace directo para completar el pago de tu página.</li>
+            <li>La confirmación del tipo de página que elegiste.</li>
+            <li>Las indicaciones para enviar material adicional (si hace falta).</li>
+          </ul>
         </div>
 
-        <!-- Botón WhatsApp (el número NO se muestra en texto, solo en el enlace) -->
-        <div class="flex flex-col items-center gap-3 mb-4">
+        <div class="text-center mb-5">
+          <p class="text-xs text-white/70 mb-3">
+            Cuando estés listo, pulsa el botón verde y envíanos el mensaje.  
+            <span class="text-clturq font-semibold">Tú activas el proceso, nosotros te acompañamos en el resto.</span>
+          </p>
+
           <a
-            href="https://wa.me/593999630862?text=Hola%2C%20ya%20complet%C3%A9%20el%20formulario%20de%20Impulso%20Digital%20360%20para%20mi%20p%C3%A1gina%20web%20profesional.%20Quiero%20aprovechar%20la%20p%C3%A1gina%20de%20ventas%20que%20ustedes%20valoran%20en%20%24480%20y%20que%20ahora%20est%C3%A1n%20dise%C3%B1ando%20gratis%2C%20y%20deseo%20que%20me%20env%C3%ADen%20el%20link%20de%20pago%20y%20los%20pasos%20siguientes%20para%20el%20dominio%20y%20hosting.%20Gracias."
+            href="https://wa.me/593999630862?text=Hola,%20ya%20llen%C3%A9%20el%20formulario%20para%20mi%20p%C3%A1gina%20web%20en%20Impulso%20Digital%20360%20y%20quiero%20finalizar%20el%20proceso%20de%20pago%20y%20dise%C3%B1o."
             target="_blank"
-            class="inline-flex items-center justify-center gap-2 rounded-full px-6 sm:px-8 py-3 sm:py-3.5 text-sm sm:text-base font-semibold bg-[#25D366] hover:bg-[#1ebe5c] text-black shadow-[0_18px_70px_rgba(37,211,102,0.7)] transition-transform duration-150 hover:-translate-y-0.5"
+            class="inline-flex items-center justify-center gap-2 rounded-full px-6 py-3 bg-[#25D366] hover:bg-[#1ebe5a] text-sm font-semibold text-white shadow-[0_18px_60px_rgba(37,211,102,0.65)] transition-transform hover:-translate-y-0.5"
           >
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 32 32" aria-hidden="true">
-              <path fill="currentColor" d="M16.04 2C9.4 2 4 7.16 4 13.7c0 2.16.64 4.16 1.75 5.87L4 30l6.7-1.74A12.2 12.2 0 0 0 16.04 25c6.64 0 12.04-5.16 12.04-11.6C28.08 7.16 22.68 2 16.04 2Zm0 20.8c-1.84 0-3.54-.5-5.02-1.4l-.36-.21-3.74.97.99-3.63-.24-.38a8.3 8.3 0 0 1-1.3-4.46C7.37 8.2 11.24 4.7 16.04 4.7s8.67 3.5 8.67 7.97c0 4.46-3.87 8.13-8.67 8.13Zm4.22-6.1c-.23-.12-1.36-.7-1.57-.78-.2-.07-.35-.12-.5.12-.15.23-.57.7-.69.85-.13.15-.25.16-.47.06-.23-.12-.96-.35-1.83-1.12-.68-.6-1.13-1.34-1.26-1.57-.13-.23-.01-.35.1-.47.1-.1.23-.27.35-.4.12-.13.16-.23.23-.38.08-.15.04-.29-.02-.41-.07-.12-.5-1.2-.69-1.65-.18-.44-.37-.38-.5-.39h-.43c-.15 0-.4.06-.61.29-.21.23-.8.78-.8 1.9 0 1.12.82 2.2.94 2.35.12.15 1.61 2.46 3.94 3.35 1.47.58 2.04.63 2.77.53.45-.06 1.36-.55 1.55-1.08.19-.53.19-.99.13-1.08-.06-.09-.21-.15-.44-.27Z"/>
-            </svg>
-            <span>Finalizar proceso por WhatsApp</span>
+            <span>Pulsa aquí para escribirnos por WhatsApp</span>
           </a>
-
-          <p class="text-[11px] text-white/60 text-center max-w-sm">
-            <strong>Paso clave:</strong> tú envías el primer mensaje.
-            Así mantienes el control de la conversación y nosotros sabemos que realmente quieres avanzar.
-          </p>
         </div>
 
-        <!-- Mensaje adicional -->
-        <div class="text-[11px] text-white/55 text-center space-y-1">
-          <p>
-            En cuanto recibamos tu mensaje, un miembro del equipo revisará tu caso y te enviará
-            los <strong>detalles de pago</strong> y la ruta para que tu página de ventas empiece a trabajar por ti.
-          </p>
-          <p class="text-white/45">
-            Si cierras esta página, siempre puedes volver desde el mismo enlace donde llenaste el formulario.
-          </p>
-        </div>
-      </div>
-
-      <div class="mt-4 text-center text-[11px] text-white/45">
-        <a href="/" class="underline-offset-2 hover:underline text-white/60">
-          Volver a la página principal
-        </a>
+        <p class="text-[11px] text-white/55 text-center">
+          Ten tu WhatsApp disponible. Mientras más rápido nos escribas, más rápido empezamos a armar tu página.
+        </p>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
-  <footer class="border-t border-white/10 py-4 bg-black/95">
-    <div class="max-w-5xl mx-auto px-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-white/55">
+  <footer class="border-t border-white/10 py-4 bg-black/90">
+    <div class="max-w-4xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-2 text-[11px] text-white/55">
       <p>© <span id="year"></span> CL Tech Solutions · Impulso Digital 360</p>
-      <p>Páginas de ventas profesionales para emprendedores que luchan.</p>
+      <p>Construyendo presencia digital para emprendedores reales.</p>
     </div>
   </footer>
 
   <script>
+    // Año dinámico
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
