Change form action URL from thank-you to gracias

--- a/index.html
+++ b/index.html
@@ -720,9 +720,9 @@
           <div class="p-6 md:p-10">
             <!-- 
                FORMULARIO NETLIFY:
-               - action="/thank-you.html": Redirige al final
+               - action="/gracias.html": Redirige al final (ruta relativa)
             -->
-            <form id="webForm" name="lead-multistep" method="POST" data-netlify="true" action="/thank-you.html" enctype="multipart/form-data" onsubmit="return validateFinalStep()">
+            <form id="webForm" name="lead-multistep" method="POST" data-netlify="true" action="/gracias.html" enctype="multipart/form-data" onsubmit="return validateFinalStep()">
               
               <input type="hidden" name="form-name" value="lead-multistep" />
               <input type="hidden" name="fecha_solicitud" id="fecha_solicitud" />
@@ -1166,4 +1166,5 @@
   </script>
 </body>
 </html>
+
 
