--- a/index.html
+++ b/index.html
@@ -352,24 +352,52 @@
                 hace que la gente te escriba, no que se pierda.
               </p>
 
-              <!-- 3 mini "pantallas" como si fueran ejemplos -->
-              <div class="grid grid-cols-3 gap-2 text-[10px] text-white/70">
-                <div class="rounded-lg bg-gradient-to-br from-sky-500/40 via-sky-700/60 to-slate-900 p-2 flex flex-col justify-between">
-                  <span class="font-semibold text-[11px] mb-1">Servicios</span>
-                  <p class="mb-2">Página para abogado, contador, técnico, etc.</p>
-                  <span class="text-[10px] text-slate-100/80">Botón: “Agenda por WhatsApp”</span>
+              <!-- GRID DE IMÁGENES 9:16 (MODIFICADO AQUÍ) -->
+              <div class="grid grid-cols-3 gap-2 mt-3">
+                <!-- Servicios -->
+                <div class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10">
+                  <img 
+                    src="mockup-servicios.jpg" 
+                    alt="Ejemplo Servicios" 
+                    class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+                    onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center p-1\'>Sube mockup-servicios.jpg</div>';"
+                  />
+                  <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2">
+                    <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Servicios</span>
+                    <span class="text-[8px] text-white/70 leading-tight">Profesionales</span>
+                  </div>
                 </div>
-                <div class="rounded-lg bg-gradient-to-br from-amber-400/40 via-amber-600/60 to-slate-900 p-2 flex flex-col justify-between">
-                  <span class="font-semibold text-[11px] mb-1">Restaurante</span>
-                  <p class="mb-2">Menú, combos y ubicación en un solo lugar.</p>
-                  <span class="text-[10px] text-slate-100/80">Botón: “Pedir ahora”</span>
+
+                <!-- Restaurante -->
+                <div class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10">
+                  <img 
+                    src="mockup-restaurante.jpg" 
+                    alt="Ejemplo Restaurante" 
+                    class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+                    onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center p-1\'>Sube mockup-restaurante.jpg</div>';"
+                  />
+                  <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2">
+                    <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Restaurante</span>
+                    <span class="text-[8px] text-white/70 leading-tight">Menú Digital</span>
+                  </div>
                 </div>
-                <div class="rounded-lg bg-gradient-to-br from-pink-400/40 via-pink-600/60 to-slate-900 p-2 flex flex-col justify-between">
-                  <span class="font-semibold text-[11px] mb-1">Heladería</span>
-                  <p class="mb-2">Sabores, fotos y pedidos rápidos.</p>
-                  <span class="text-[10px] text-slate-100/80">Botón: “Quiero mi helado”</span>
+
+                <!-- Heladería -->
+                <div class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10">
+                  <img 
+                    src="mockup-heladeria.jpg" 
+                    alt="Ejemplo Heladería" 
+                    class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+                    onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center p-1\'>Sube mockup-heladeria.jpg</div>';"
+                  />
+                  <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2">
+                    <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Heladería</span>
+                    <span class="text-[8px] text-white/70 leading-tight">Catálogo</span>
+                  </div>
                 </div>
               </div>
+              <!-- FIN GRID IMÁGENES -->
+
             </div>
           </div>
 
@@ -977,110 +1005,28 @@
           </div>
         </div>
 
-        <p class="mt-6 text-[11px] text-white/60 text-center">
-          El contador no se va a detener porque tengas miedo. Tus clientes tampoco.
+        <p class="text-center text-[10px] text-white/30 mt-6">
+          &copy; 2025 CL Tech Solutions. Tus datos están seguros con nosotros.
         </p>
       </div>
     </section>
+
   </main>
 
-  <!-- BOTÓN FLOTANTE WHATSAPP (MANTENIDO) -->
-  <a
-    href="https://wa.me/593999630862?text=Hola%20Cristian%2C%20acabo%20de%20ver%20tu%20p%C3%A1gina%20de%20Impulso%20Digital%20360%20y%20quiero%20m%C3%A1s%20informaci%C3%B3n%20para%20aprovechar%20la%20oferta%20de%2097%20USD."
-    target="_blank"
-    class="fixed z-40 bottom-4 right-4 sm:bottom-5 sm:right-5 h-12 w-12 sm:h-14 sm:w-14 rounded-full bg-emerald-500 flex items-center justify-center shadow-[0_18px_70px_rgba(16,185,129,0.9)]"
-  >
-    <span class="sr-only">Escríbenos por WhatsApp</span>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="w-7 h-7 text-white">
-      <path fill="currentColor" d="M16.04 2C9.4 2 4 7.16 4 13.7c0 2.16.64 4.16 1.75 5.87L4 30l6.7-1.74A12.2 12.2 0 0 0 16.04 25c6.64 0 12.04-5.16 12.04-11.6C28.08 7.16 22.68 2 16.04 2Zm0 20.8c-1.84 0-3.54-.5-5.02-1.4l-.36-.21-3.74.97.99-3.63-.24-.38a8.3 8.3 0 0 1-1.3-4.46C7.37 8.2 11.24 4.7 16.04 4.7s8.67 3.5 8.67 7.97c0 4.46-3.87 8.13-8.67 8.13Zm4.22-6.1c-.23-.12-1.36-.7-1.57-.78-.2-.07-.35-.12-.5.12-.15.23-.57.7-.69.85-.13.15-.25.16-.47.06-.23-.12-.96-.35-1.83-1.12-.68-.6-1.13-1.34-1.26-1.57-.13-.23-.01-.35.1-.47.1-.1.23-.27.35-.4.12-.13.16-.23.23-.38.08-.15.04-.29-.02-.41-.07-.12-.5-1.2-.69-1.65-.18-.44-.37-.38-.5-.39h-.43c-.15 0-.4.06-.61.29-.21.23-.8.78-.8 1.9 0 1.12.82 2.2.94 2.35.12.15 1.61 2.46 3.94 3.35 1.47.58 2.04.63 2.77.53.45-.06 1.36-.55 1.55-1.08.19-.53.19-.99.13-1.08-.06-.09-.21-.15-.44-.27Z"/>
-    </svg>
-  </a>
-
-  <!-- FOOTER -->
   <footer class="border-t border-white/10 py-6 bg-black/95">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 flex flex-col md:flex-row items-center justify-between gap-3 text-[11px] text-white/55">
-      <p>© <span id="year"></span> CL Tech Solutions · Impulso Digital 360</p>
-      <p>Página web de $480 gratis · Solo pagas dominio y hosting.</p>
+      <p>© 2025 CL Tech Solutions · Impulso Digital 360</p>
     </div>
   </footer>
 
-  <!-- SCRIPTS -->
+  <!-- LÓGICA DEL FORMULARIO -->
   <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-
-    // Lucide Icons
     lucide.createIcons();
 
-    // Menú móvil con cierre al hacer clic fuera
-    const mobileBtn = document.getElementById("mobileMenuBtn");
-    const mobileNav = document.getElementById("mobileNav");
-
-    if (mobileBtn && mobileNav) {
-      mobileBtn.addEventListener("click", (event) => {
-        event.stopPropagation();
-        mobileNav.classList.toggle("hidden");
-      });
-
-      document.addEventListener("click", (event) => {
-        const clickInsideMenu = mobileNav.contains(event.target);
-        const clickOnToggle = mobileBtn.contains(event.target);
-        if (!clickInsideMenu && !clickOnToggle && !mobileNav.classList.contains("hidden")) {
-          mobileNav.classList.add("hidden");
-        }
-      });
-    }
-
-    // Cuenta regresiva 15 minutos (PERSISTENTE)
-    (function() {
-      const minsEl = document.getElementById("cd-mins");
-      const secsEl = document.getElementById("cd-secs");
-
-      if (!minsEl || !secsEl) return;
-
-      const DURATION = 15 * 60; 
-      const STORAGE_KEY = 'impulso_timer_target_v1';
-
-      function getEndTime() {
-        let stored = localStorage.getItem(STORAGE_KEY);
-        if (stored) {
-          const target = parseInt(stored, 10);
-          if (target > Date.now()) return target;
-        }
-        const newTarget = Date.now() + (DURATION * 1000);
-        localStorage.setItem(STORAGE_KEY, newTarget);
-        return newTarget;
-      }
-
-      let endTime = getEndTime();
-
-      function updateCountdown() {
-        const now = Date.now();
-        let remaining = Math.floor((endTime - now) / 1000);
-        if (remaining < 0) remaining = 0;
-
-        const m = Math.floor(remaining / 60);
-        const s = remaining % 60;
-
-        minsEl.textContent = String(m).padStart(2, "0");
-        secsEl.textContent = String(s).padStart(2, "0");
-
-        if (remaining <= 0) {
-          clearInterval(timer);
-          minsEl.classList.add("text-red-500");
-          secsEl.classList.add("text-red-500");
-        }
-      }
-
-      updateCountdown();
-      const timer = setInterval(updateCountdown, 1000);
-    })();
-
-    /* =========================================
-       LÓGICA DEL FORMULARIO MULTI-PASOS
-       ========================================= */
     let currentStep = 1;
     const totalSteps = 6;
-    
+    const form = document.getElementById('webForm');
+
     // Inicializar fecha
     const dateInput = document.getElementById('fecha_solicitud');
     if(dateInput) dateInput.value = new Date().toISOString();
@@ -1163,8 +1109,49 @@
       }
       return true; // Permite el envío
     }
+
+    // Contador del Header (Persistente)
+    (function() {
+      const minsEl = document.getElementById("cd-mins");
+      const secsEl = document.getElementById("cd-secs");
+      if (!minsEl || !secsEl) return;
+
+      const DURATION = 15 * 60; 
+      const STORAGE_KEY = 'impulso_timer_target_v1';
+
+      function getEndTime() {
+        let stored = localStorage.getItem(STORAGE_KEY);
+        if (stored) {
+          const target = parseInt(stored, 10);
+          if (target > Date.now()) return target;
+        }
+        const newTarget = Date.now() + (DURATION * 1000);
+        localStorage.setItem(STORAGE_KEY, newTarget);
+        return newTarget;
+      }
+
+      let endTime = getEndTime();
+
+      function updateCountdown() {
+        const now = Date.now();
+        let remaining = Math.floor((endTime - now) / 1000);
+        if (remaining < 0) remaining = 0;
+
+        const m = Math.floor(remaining / 60);
+        const s = remaining % 60;
+
+        minsEl.textContent = String(m).padStart(2, "0");
+        secsEl.textContent = String(s).padStart(2, "0");
+
+        if (remaining <= 0) {
+          clearInterval(timer);
+          minsEl.classList.add("text-red-500");
+          secsEl.classList.add("text-red-500");
+        }
+      }
+      updateCountdown();
+      const timer = setInterval(updateCountdown, 1000);
+    })();
   </script>
 </body>
 </html>
-
-
