--- a/index.html
+++ b/index.html
@@ -391,65 +391,103 @@
                 Título claro, oferta directa, secciones simples, botones a WhatsApp visibles y un diseño que no distrae:
                 hace que la gente te escriba, no que se pierda.
               </p>
+<!-- GRID DE IMÁGENES 9:16 (CORREGIDO Y 100% FUNCIONAL) -->
+<div class="grid grid-cols-3 gap-2 mt-3">
 
-              <!-- GRID DE IMÁGENES 9:16 (MODIFICADO: AHORA SOPORTAN GALERÍA) -->
-              <div class="grid grid-cols-3 gap-2 mt-3">
-                
-                <!-- Servicios (1 sola imagen) -->
-                <div 
-                  class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10"
-                  onclick="abrirModal3D('Servicios Profesionales', 'Diseño limpio y serio. Muestra tus servicios, biografía y botones de contacto claros.', ['mockup-servicios.jpg'], 'from-blue-600 to-cyan-500')"
-                >
-                  <img 
-                    src="mockup-servicios.jpg" 
-                    alt="Ejemplo Servicios" 
-                    class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
-                    onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center p-1\'>Sube mockup-servicios.jpg</div>';"
-                  />
-                  <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2 pointer-events-none">
-                    <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Servicios</span>
-                    <span class="text-[8px] text-white/70 leading-tight">Ver en 3D</span>
-                  </div>
-                </div>
+  <!-- =======================
+       1) SERVICIOS (2 IMÁGENES)
+       ======================= -->
+  <div 
+    class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10"
+    onclick="abrirModal3D(
+      'Servicios Profesionales',
+      'Diseño limpio y serio. Muestra tus servicios, tu perfil y botones de contacto claros.',
+      ['mockup-servicios.jpg','mockup-servicios-detalle.jpg'],
+      'from-blue-600 to-cyan-500'
+    )"
+  >
+    <img 
+      src="mockup-servicios.jpg" 
+      alt="Servicios Profesionales" 
+      class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+      onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center\'>Falta mockup-servicios.jpg</div>';"
+    />
+    <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2 pointer-events-none">
+      <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Servicios</span>
+      <span class="text-[8px] text-white/70 leading-tight">Ver en 3D</span>
+    </div>
 
-                <!-- Restaurante (2 IMÁGENES: Menú + Carrito) -->
-                <div 
-                  class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10"
-                  onclick="abrirModal3D('Restaurantes y Comida', 'Menú digital interactivo. Desliza para ver cómo se ve el Carrito de Compras listo para enviar a WhatsApp.', ['mockup-restaurante.jpg', 'mockup-restaurante-carrito.jpg'], 'from-orange-600 to-red-500')"
-                >
-                  <img 
-                    src="mockup-restaurante.jpg" 
-                    alt="Ejemplo Restaurante" 
-                    class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
-                    onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center p-1\'>Sube mockup-restaurante.jpg</div>';"
-                  />
-                  <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2 pointer-events-none">
-                    <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Restaurante</span>
-                    <span class="text-[8px] text-white/70 leading-tight">Ver Carrito</span>
-                  </div>
-                  <!-- Indicador de que hay más fotos -->
-                  <div class="absolute top-2 right-2 bg-black/60 rounded-full p-1 border border-white/20">
-                     <svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 24 24"><path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/></svg>
-                  </div>
-                </div>
+    <!-- Indicador de varias imágenes -->
+    <div class="absolute top-2 right-2 bg-black/60 rounded-full p-1 border border-white/20">
+      <svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/>
+      </svg>
+    </div>
+  </div>
 
-                <!-- Heladería (2 IMÁGENES opcional) -->
-                <div 
-                  class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10"
-                  onclick="abrirModal3D('Heladerías y Postres', 'Catálogo visual irresistible. Perfecto para antojar a tus clientes y vender más.', ['mockup-heladeria.jpg', 'mockup-heladeria-2.jpg'], 'from-pink-600 to-purple-500')"
-                >
-                  <img 
-                    src="mockup-heladeria.jpg" 
-                    alt="Ejemplo Heladería" 
-                    class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
-                    onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center p-1\'>Sube mockup-heladeria.jpg</div>';"
-                  />
-                  <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2 pointer-events-none">
-                    <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Heladería</span>
-                    <span class="text-[8px] text-white/70 leading-tight">Ver en 3D</span>
-                  </div>
-                </div>
-              </div>
+  <!-- =======================
+       2) RESTAURANTE (2 IMÁGENES)
+       ======================= -->
+  <div 
+    class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10"
+    onclick="abrirModal3D(
+      'Restaurantes y Comida',
+      'Menú digital interactivo y carrito listo para enviar pedidos por WhatsApp.',
+      ['mockup-restaurante.jpg','mockup-restaurante-carrito.jpg'],
+      'from-orange-600 to-red-500'
+    )"
+  >
+    <img 
+      src="mockup-restaurante.jpg" 
+      alt="Restaurante" 
+      class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+      onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center\'>Falta mockup-restaurante.jpg</div>';"
+    />
+    <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2 pointer-events-none">
+      <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Restaurante</span>
+      <span class="text-[8px] text-white/70 leading-tight">Ver Carrito</span>
+    </div>
+
+    <!-- Indicador de varias imágenes -->
+    <div class="absolute top-2 right-2 bg-black/60 rounded-full p-1 border border-white/20">
+      <svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/>
+      </svg>
+    </div>
+  </div>
+
+  <!-- =======================
+       3) HELADERÍA (2 IMÁGENES)
+       ======================= -->
+  <div 
+    class="relative aspect-[9/16] rounded-lg overflow-hidden group cursor-pointer border border-white/10"
+    onclick="abrirModal3D(
+      'Heladerías y Postres',
+      'Catálogo visual irresistible, perfecto para vender antojos.',
+      ['mockup-heladeria.jpg','mockup-heladeria-detalle.jpg'],
+      'from-pink-600 to-purple-500'
+    )"
+  >
+    <img 
+      src="mockup-heladeria.jpg" 
+      alt="Heladería" 
+      class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+      onerror="this.onerror=null; this.parentElement.style.backgroundColor='#1e293b'; this.parentElement.innerHTML='<div class=\'flex items-center justify-center h-full text-[10px] text-white/50 text-center\'>Falta mockup-heladeria.jpg</div>';"
+    />
+    <div class="absolute inset-0 bg-gradient-to-t from-black/90 via-black/20 to-transparent flex flex-col justify-end p-2 pointer-events-none">
+      <span class="text-[9px] uppercase tracking-wider text-clturq font-bold block">Heladería</span>
+      <span class="text-[8px] text-white/70 leading-tight">Ver en 3D</span>
+    </div>
+
+    <!-- Indicador de varias imágenes -->
+    <div class="absolute top-2 right-2 bg-black/60 rounded-full p-1 border border-white/20">
+      <svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"/>
+      </svg>
+    </div>
+  </div>
+
+</div>
               <!-- FIN GRID IMÁGENES -->
 
             </div>
